feat: trying things

--- a/notebooks/gecko.ipynb
+++ b/notebooks/gecko.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "bb86e06c",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "92564743",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "id": "9f53a94e",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "'\\nNOTE: SMILE notation for compounds in DLKcat model are as follows.\\nSqualene - https://pubchem.ncbi.nlm.nih.gov/compound/Squalene\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,8 +270,8 @@
     "    'P52020': 0.683,   # SMO - Sterol 14α-demethylase\n",
     "    'P29704': 0.53,    # SQS2 - Squalene synthase (Saccharomyces cerevisiae)\n",
     "    'DUMMY3': 1.74,    # SQS2 - Squalene synthase (Thermosynechococcus vestitus)\n",
-    "    # 'P32476': 999,     # SQE2 - Squalene epoxidase (Saccharomyces cerevisiae) (DL-Kcat used)\n",
-    "    # 'A0A0E4FJ73': 999, # SQE2 - Squalene epoxidase (Botryococcus braunii) (DL-Kcat used)\n",
+    "    'P32476': 3.2442,     # SQE2 - Squalene epoxidase (Saccharomyces cerevisiae) (DL-Kcat used)\n",
+    "    'A0A0E4FJ73': 17.7006, # SQE2 - Squalene epoxidase (Botryococcus braunii) (DL-Kcat used)\n",
     "}\n",
     "\n",
     "# Enzyme availability (mmol enzyme/gDW) - realistic cellular concentrations\n",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "id": "a4c179d3",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "24f87dbb",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "id": "84384066",
    "metadata": {},
    "outputs": [
@@ -722,12 +722,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f277cdb80>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f395d0770>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f277cdc70>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f395d0860>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -742,17 +742,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f278b00e0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f3946ac90>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f278b00b0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f3946ac60>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f278b0110>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f3946acc0>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "Model: SQE+MVA\n",
@@ -783,7 +783,7 @@
       "\n",
       "\tReaction: ALT_IDLI\n",
       "\t\tGPR:IDLI\n",
-      "\t\tGenes:frozenset({<Gene IDLI at 0x28f186753a0>})\n",
+      "\t\tGenes:frozenset({<Gene IDLI at 0x28f2e9755e0>})\n",
       "\t\tGene-Reaction:IDLI\n",
       "\n",
       "\tReaction: DXS\n",
@@ -798,12 +798,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f1ca5a4b0>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f2e6a2f00>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f1ca5a540>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f2e6a2ff0>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -818,17 +818,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f18d2bfe0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f2e975460>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f18d2b830>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f2e975430>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f18d2b530>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f2e975490>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "\tReaction: ALT_SQE2\n",
@@ -849,12 +849,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f1aa13920>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f38e21f70>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f1aa10800>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f38e22060>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -869,17 +869,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f190254f0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f15326360>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f19027170>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f153264b0>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f19024980>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f15325b50>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "\tReaction: ALT_SQE2\n",
@@ -915,7 +915,7 @@
       "\n",
       "\tReaction: ALT_IDLI\n",
       "\t\tGPR:IDLI\n",
-      "\t\tGenes:frozenset({<Gene IDLI at 0x28f293d1580>})\n",
+      "\t\tGenes:frozenset({<Gene IDLI at 0x28f2615a090>})\n",
       "\t\tGene-Reaction:IDLI\n",
       "\n",
       "\tReaction: DXS\n",
@@ -930,12 +930,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f30b5c260>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f152394c0>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f30ba3ef0>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f15239880>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -950,17 +950,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f293d1910>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f2615ae70>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f293d1790>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f2615aff0>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f293d17f0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f2615ae10>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "\tReaction: ALT_PSPPS2\n",
@@ -1001,7 +1001,7 @@
       "\n",
       "\tReaction: ALT_IDLI\n",
       "\t\tGPR:IDLI\n",
-      "\t\tGenes:frozenset({<Gene IDLI at 0x28f1c80ab10>})\n",
+      "\t\tGenes:frozenset({<Gene IDLI at 0x28f3219c320>})\n",
       "\t\tGene-Reaction:IDLI\n",
       "\n",
       "\tReaction: DXS\n",
@@ -1016,12 +1016,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f1ad03470>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f285ae000>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f1ad01c40>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f285addf0>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -1036,17 +1036,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f1c80aa80>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f3219d280>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f1c80b170>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f3219c8c0>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f1c80b140>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f3219f2f0>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "\tReaction: ALT_PSPPS2\n",
@@ -1077,12 +1077,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f3260cb60>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f3230d7f0>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f3260fd70>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f3230f170>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -1097,17 +1097,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f398641a0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f18e0f170>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f39864320>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f18e0ffb0>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f398642c0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f18e0f920>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "\tReaction: ALT_PSPPS2\n",
@@ -1138,12 +1138,12 @@
       "\n",
       "\tReaction: CMS\n",
       "\t\tGPR:Cre16.g679669.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f39197bc0>})\n",
+      "\t\tGenes:frozenset({<Gene Cre16.g679669.t1.1 at 0x28f16e07080>})\n",
       "\t\tGene-Reaction:Cre16.g679669.t1.1\n",
       "\n",
       "\tReaction: HDS\n",
       "\t\tGPR:Cre12.g490350.t1.1\n",
-      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f39197cb0>})\n",
+      "\t\tGenes:frozenset({<Gene Cre12.g490350.t1.1 at 0x28f16e05190>})\n",
       "\t\tGene-Reaction:Cre12.g490350.t1.1\n",
       "\n",
       "\tReaction: SS\n",
@@ -1158,17 +1158,17 @@
       "\n",
       "\tReaction: ERG5\n",
       "\t\tGPR:ERG5\n",
-      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f392b6120>})\n",
+      "\t\tGenes:frozenset({<Gene ERG5 at 0x28f18fef3e0>})\n",
       "\t\tGene-Reaction:ERG5\n",
       "\n",
       "\tReaction: ERG3\n",
       "\t\tGPR:ERG3\n",
-      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f392b60f0>})\n",
+      "\t\tGenes:frozenset({<Gene ERG3 at 0x28f18fef440>})\n",
       "\t\tGene-Reaction:ERG3\n",
       "\n",
       "\tReaction: ERG\n",
       "\t\tGPR:ERG4\n",
-      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f392b6150>})\n",
+      "\t\tGenes:frozenset({<Gene ERG4 at 0x28f18fef350>})\n",
       "\t\tGene-Reaction:ERG4\n",
       "\n",
       "\tReaction: ALT_PSPPS2\n",
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "ac388435",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "id": "4f19fccc",
    "metadata": {},
    "outputs": [],
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "id": "9465dc0a",
    "metadata": {},
    "outputs": [
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "id": "8a2dcad4",
    "metadata": {},
    "outputs": [
@@ -1587,9 +1587,11 @@
       "Applying constraints to model: SQE+MVA_updated\n",
       "  Processing DXS with enzymes: ['O81954']\n",
       "  Processing SMO with enzymes: ['P52020']\n",
+      "  Processing ALT_SQE2 with enzymes: ['A0A0E4FJ73']\n",
       "Applying constraints to model: SQE_updated\n",
       "  Processing DXS with enzymes: ['O81954']\n",
       "  Processing SMO with enzymes: ['P52020']\n",
+      "  Processing ALT_SQE2 with enzymes: ['A0A0E4FJ73']\n",
       "Applying constraints to model: SQS+MVA_updated\n",
       "  Processing DXS with enzymes: ['O81954']\n",
       "  Processing SMO with enzymes: ['P52020']\n",
@@ -1600,11 +1602,13 @@
       "  Processing SMO with enzymes: ['P52020']\n",
       "  Processing ALT_PSPPS2 with enzymes: ['P29704']\n",
       "  Processing ALT_SQS2 with enzymes: ['P29704']\n",
+      "  Processing ALT_SQE2 with enzymes: ['A0A0E4FJ73']\n",
       "Applying constraints to model: SQS+SQE_updated\n",
       "  Processing DXS with enzymes: ['O81954']\n",
       "  Processing SMO with enzymes: ['P52020']\n",
       "  Processing ALT_PSPPS2 with enzymes: ['P29704']\n",
       "  Processing ALT_SQS2 with enzymes: ['P29704']\n",
+      "  Processing ALT_SQE2 with enzymes: ['A0A0E4FJ73']\n",
       "Applying constraints to model: SQS_updated\n",
       "  Processing DXS with enzymes: ['O81954']\n",
       "  Processing SMO with enzymes: ['P52020']\n",
@@ -1710,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "id": "5a95ba1b",
    "metadata": {},
    "outputs": [
